# RD_HW_6

./: .gitignore  README.md  docker-compose.yaml  example.env  main.py  pyproject.toml
app/: config.py  crud.py  database.py  models.py  serializers.py
migrations/: env.py
